--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /.metadata/
+
+/RemoteSystemsTempFiles/
+/docker-git-hello-world/.classpath
+/docker-git-hello-world/.project
+/docker-git-hello-world/.settings/
